# ACM-SIGMOD

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  performance_results.txt
include/: core.h
spark-matcher/: build.sbt
spark-matcher/project/: plugins.sbt
spark-matcher/src/main/scala/com/textmatcher/: BenchmarkRunner.scala  DistributedMatcher.scala  DistributedMatcherTest.scala
task1/: core.cpp
task1faster/: core.cpp
task2/: core.cpp
test/: CMakeLists.txt  test_core.cpp
test_driver/: test.cpp
